test os update rep

--- a/animal_shelter/templates/map.html
+++ b/animal_shelter/templates/map.html
@@ -1,4 +1,4 @@
 {% extends 'for_base/top.html' %}
 {% block contant %}
-    <div id="map" style="width: 600px; height: 400px">kjhsfjk</div>
+    <div id="map" style="width: 600px; height: 400px"></div>
 {% endblock %}
