--- a/animal_shelter/templates/for_base/top.html
+++ b/animal_shelter/templates/for_base/top.html
@@ -8,7 +8,8 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
-    <script src="https://api-maps.yandex.ru/2.1/?apikey=b82f41de-e8e7-4651-8afb-60de25a3e9d9&lang=ru_RU" type="text/javascript">
+{#    <script src="https://api-maps.yandex.ru/2.1/?apikey=b82f41de-e8e7-4651-8afb-60de25a3e9d9&lang=ru_RU" type="text/javascript">#}
+    <script src="https://geocode-maps.yandex.ru/1.x/?apikey=b82f41de-e8e7-4651-8afb-60de25a3e9d9" type="text/javascript">
     </script>
 </head>
 <body class="bg-light">
