--- a/animal_shelter/templates/for_base/top.html
+++ b/animal_shelter/templates/for_base/top.html
@@ -47,6 +47,7 @@
     </div>
     {% block contant %} {% endblock %}
 </div>
+    {% block map %} {% endblock %}
 <footer class="page-footer font-small  fixed-bottom">
     <div class="footer-block">
         <div class="container-fluid footer-copyright row py-3">
