--- a/animal_shelter/templates/map.html
+++ b/animal_shelter/templates/map.html
@@ -1,4 +1,4 @@
 {% extends 'for_base/top.html' %}
-{% block contant %}
-    <div id="map" style="width: 100%; height: 400px"></div>
+{% block map %}
+    <div class="shadow-sm" id="map" style="width: 100%; height: 400px"></div>
 {% endblock %}
