--- a/animal_shelter/templates/base.html
+++ b/animal_shelter/templates/base.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block title %}Приют для животных{% endblock %}
 {% block finder_by_kind %}
-    <div class="flex-row">
+    <div class="d-flex flex-row">
         <a href="/admin/"><button class="btn btn-dark btn-sm mb-3">Добавить животное</button></a>
         <p>login: admin, psw: admin</p>
     </div>
