admin log - pass

--- a/animal_shelter/templates/base.html
+++ b/animal_shelter/templates/base.html
@@ -3,7 +3,7 @@
 {% block title %}Приют для животных{% endblock %}
 {% block finder_by_kind %}
     <div class="d-flex flex-row">
-        <a href="/admin/"><button class="btn btn-dark btn-sm mb-3">Добавить животное</button></a>
+        <a href="/admin/"><button class="btn btn-dark btn-sm mb-3 mr-3">Добавить животное</button></a>
         <p>login: admin, psw: admin</p>
     </div>
     <p><b>Фильтры</b></p>
