--- a/animal_shelter/templates/animal_shelter/about.html
+++ b/animal_shelter/templates/animal_shelter/about.html
@@ -1,4 +1,4 @@
-{% extends 'for_base/top.html' %}
+{% extends 'base.html' %}
 {% load static %}
 {% block title %}О нас{% endblock %}
 {% block contant %}
