--- a/animal_shelter/templates/animal_shelter/details.html
+++ b/animal_shelter/templates/animal_shelter/details.html
@@ -1,4 +1,4 @@
-{% extends 'for_base/top.html' %}
+{% extends 'base.html' %}
 {% block title %}{{ object.name }}{% endblock %}
 {% block finder_by_kind %}
     <p><b>Фильтры</b></p>
