--- a/animal_shelter/templates/animal_shelter/index.html
+++ b/animal_shelter/templates/animal_shelter/index.html
@@ -1,4 +1,4 @@
-{% extends 'for_base/top.html' %}
+{% extends 'base.html' %}
 {% load static %}
 {% block title %}Приют для животных{% endblock %}
 {% block finder_by_kind %}
