--- a/animal_shelter/templates/animal_shelter/map.html
+++ b/animal_shelter/templates/animal_shelter/map.html
@@ -1,4 +1,4 @@
-{% extends 'for_base/top.html' %}
+{% extends 'base.html' %}
 {% block map %}
     <div class="shadow-sm" id="map" style="width: 100%; height: 400px"></div>
 {% endblock %}
