--- a/animal_shelter/static/css/main.css
+++ b/animal_shelter/static/css/main.css
@@ -1,8 +1,34 @@
+body {
+    background-color: #f5f5f5;
+}
 #logo {
     width: 70px;
     left: 15px;
 }
-
+.title-line {
+    position: relative;
+    text-align: center;
+    margin-bottom: 10px;
+}
+.span-line {
+    position: relative;
+    z-index: 2;
+    background-color: #f5f5f5;
+    padding: 0 10px;
+}
+.span {
+    font-weight: bolder;
+}
+.title-line:after {
+    content: "";
+    width: 100%;
+    height: 2px;
+    display: block;
+    position: absolute;
+    top: 12px;
+    left: 0;
+    background: #0d2d3d;
+}
 .navbar {
     background-color: rgb(234, 72, 19);
 }
@@ -11,6 +37,30 @@
 }
 footer {
     background-color: rgb(23, 123, 25);
+}
+.auth {
+    margin: auto;
+    max-width: 760px;
+}
+.top-h5 {
+    font: 18px/26px PtSansNarrowRegular;
+    font-weight: normal;
+    border-bottom: solid black 1px;
+}
+.auth-left {
+    width: 49%;
+    float: left;
+    background: #ffffff;
+    padding: 18px 4%;
+    border: 1px solid #d5d7d8;
+}
+
+.auth-right {
+    width: 48.7%;
+    float: right;
+    background: #ffffff;
+    padding: 18px 4%;
+    border: 1px solid #d5d7d8;
 }
 
 #hh {
